--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <div class="introduction">
         <h2>Who We Are?</h2>
-        <p>Qelas.id merupakan start-up yang bergerak di bidang pendidikan, kami akan mempertemukan para pelajar dengan master teacher terbaik yang telah kami seleksi khusu untuk kamu sobat qelas.id!</p>
+        <p>Qelas.id merupakan start-up yang bergerak di bidang pendidikan, kami akan mempertemukan para pelajar dengan master teacher terbaik yang telah kami seleksi khusus untuk kamu sobat qelas.id!</p>
         <div>
             <button class="button">View Careers</button>
         </div>
